welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: value avance is not a member of Unit
  	avance()avance()
                ^